--- a/src/components/article/style.css
+++ b/src/components/article/style.css
@@ -24,3 +24,32 @@
     opacity: 0.01;
     transition: opacity 300ms ease-in;
 }
+/*
+.background-enter {
+     transform: translate(100%);
+ }
+.background-enter.background-enter-active {
+    transform: translate(0%);
+    transition: transform 1000ms ease-in-out;
+}
+.background-leave {
+    transform: translate(0%);
+}
+.background-leave.background-leave-active {
+    transform: translate(-100%);
+    transition: transform 1000ms ease-in-out;
+}*/
+.scale-enter {
+    transform: scaleY(0);
+    transform-origin: top;
+}
+.scale-enter.scale-enter-active {
+    transform: scaleY(1);
+    transition: transform 500ms linear;
+
+}
+.scale-leave-active {
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 1s linear;
+}
